Fixed overflow on welcome screen on smaller monitors

--- a/styles/main.css
+++ b/styles/main.css
@@ -18,7 +18,7 @@ body{
     text-align: center;
     display:flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     overflow:auto;
     background-color: #43AA8B;
     
